# bevy-test

./: Cargo.toml
assets/: duck.glb
src/: main.rs  player.rs
